--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-router": "^7.9.4",
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.16"
